Докер и регистрация/логин
Созданы 2 Dockerfile'а: для фронтенда и бэкенда. Создан Docker-compose.yml. Создано окружение из React, ASP.NET, Redis, PostgreSQL. На стороне бэка были сделаны ручки для регистрации и входа

--- a/Backend/Dockerfile
+++ b/Backend/Dockerfile
@@ -1,24 +1,27 @@
-# Используем официальный образ SDK для сборки
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-# Копируем файлы проекта и восстанавливаем зависимости
-COPY ["YourProject.csproj", "."]
-RUN dotnet restore "YourProject.csproj"
+# Копируем ВСЕ файлы решения
+COPY *.sln .
+COPY API/*.csproj API/
+COPY Application/*.csproj Application/
+COPY Domain/*.csproj Domain/
+COPY Infrastructure/*.csproj Infrastructure/
 
-# Копируем остальные файлы и собираем проект
+# Восстановление зависимостей
+RUN dotnet restore
+
+# Копируем весь исходный код
 COPY . .
-RUN dotnet build "YourProject.csproj" -c Release -o /app/build
-RUN dotnet publish "YourProject.csproj" -c Release -o /app/publish
 
-# Используем runtime образ для финального контейнера
+# Сборка решения
+RUN dotnet build -c Release -o /app/build
+
+# Публикация проекта
+RUN dotnet publish API/WebAPI.csproj -c Release -o /app/publish
+
+# Финальный образ
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
 COPY --from=build /app/publish .
-
-# Указываем порт, который будет использоваться
-EXPOSE 80
-EXPOSE 443
-
-# Команда запуска приложения
-ENTRYPOINT ["dotnet", "YourProject.dll"]
+ENTRYPOINT ["dotnet", "WebAPI.dll"]
