--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,9 +6,8 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
-        "lint": "eslint .",
-        "preview": "vite preview",
-        "format": "npx prettier --write"
+        "lint": "npx prettier --write . && eslint .",
+        "preview": "vite preview"
     },
     "dependencies": {
         "@tanstack/react-query": "^5.72.2",
