--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
-        "lint": "npx prettier --write . && eslint .",
+        "lint": "npx prettier --write src/ && eslint --fix src/",
         "preview": "vite preview"
     },
     "dependencies": {
@@ -25,6 +25,7 @@
         "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
         "eslint": "^9.21.0",
+        "eslint-plugin-import": "^2.31.0",
         "eslint-plugin-react-hooks": "^5.1.0",
         "eslint-plugin-react-refresh": "^0.4.19",
         "globals": "^15.15.0",
