--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -54,6 +54,8 @@ services:
                 condition: service_healthy
             redis:
                 condition: service_healthy
+            minio:
+                condition: service_healthy
 
     # React фронтенд сервис
     frontend:
@@ -70,6 +72,29 @@ services:
         depends_on:
             - backend
 
+    minio:
+        image: minio/minio
+        container_name: project_minio
+        ports:
+            - "9000:9000"
+            - "9001:9001"
+        env_file:
+            - .env
+        environment:
+            MINIO_ROOT_USER: ${MINIO_USER}
+            MINIO_ROOT_PASSWORD: ${MINIO_PASSWORD}
+        volumes:
+            - minio_data:/data
+        command: server /data --console-address ":9001"
+        networks:
+            - app-network
+        healthcheck:
+            test:
+                ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+            interval: 30s
+            timeout: 20s
+            retries: 3
+
 networks:
     app-network:
         driver: bridge
@@ -78,3 +103,4 @@ networks:
 volumes:
     postgres_data:
     redis_data:
+    minio_data:
