--- a/Backend/API/WebAPI.csproj
+++ b/Backend/API/WebAPI.csproj
@@ -12,6 +12,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.1" />
+    <PackageReference Include="Minio" Version="6.0.4" />
   </ItemGroup>
 
   <ItemGroup>
