--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -47,6 +47,10 @@ services:
             - ASPNETCORE_URLS=http://+:80
             - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=${DB_NAME:-appdb};Username=${DB_USER:-postgres};Password=${DB_PASSWORD:-postgres}
             - Redis__ConnectionString=redis
+            - Minio__Endpoint=minio:9000
+            - Minio__AccessKey=${MINIO_USER}
+            - Minio__SecretKey=${MINIO_PASSWORD}
+            - Minio__UseSSL=false
         networks:
             - app-network
         depends_on:
