--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -42,15 +42,22 @@ services:
             context: ./Backend
             dockerfile: Dockerfile
         container_name: project_backend
+        env_file: # Добавляем чтение .env файла и сюда
+            - .env
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
             - ASPNETCORE_URLS=http://+:80
             - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=${DB_NAME:-appdb};Username=${DB_USER:-postgres};Password=${DB_PASSWORD:-postgres}
             - Redis__ConnectionString=redis
-            - Minio__Endpoint=minio:9000
-            - Minio__AccessKey=${MINIO_USER}
-            - Minio__SecretKey=${MINIO_PASSWORD}
+              - Minio__Endpoint=minio:9000
+            # Имя пользователя MinIO (из .env)
+            - Minio__AccessKey=${MINIO_USER:-minioadmin}
+            # Пароль MinIO (из .env)
+            - Minio__SecretKey=${MINIO_PASSWORD:-minioadmin}
+            # Указываем, что не используем SSL для внутренней коммуникации
             - Minio__UseSSL=false
+            # Имя бакета по умолчанию (можно тоже вынести в .env)
+            - Minio__BucketName=${MINIO_DEFAULT_BUCKET:-my-app-bucket}
         networks:
             - app-network
         depends_on:
@@ -58,7 +65,7 @@ services:
                 condition: service_healthy
             redis:
                 condition: service_healthy
-            minio:
+            minio: # Добавляем зависимость от MinIO (НОВОЕ)
                 condition: service_healthy
 
     # React фронтенд сервис
@@ -77,27 +84,35 @@ services:
             - backend
 
     minio:
-        image: minio/minio
+        image: minio/minio:latest # Используем официальный образ MinIO
         container_name: project_minio
-        ports:
-            - "9000:9000"
-            - "9001:9001"
-        env_file:
-            - .env
-        environment:
-            MINIO_ROOT_USER: ${MINIO_USER}
-            MINIO_ROOT_PASSWORD: ${MINIO_PASSWORD}
-        volumes:
-            - minio_data:/data
+        # Запускаем сервер MinIO, указываем путь к данным и адрес консоли
         command: server /data --console-address ":9001"
+        env_file:
+            - .env # Читаем переменные из .env
+        environment:
+            # Учетные данные для доступа к MinIO (из .env файла)
+            MINIO_ROOT_USER: ${MINIO_USER:-minioadmin} # Задает пользователя по умолчанию, если в .env нет
+            MINIO_ROOT_PASSWORD: ${MINIO_PASSWORD:-minioadmin} # Задает пароль по умолчанию, если в .env нет
+            MINIO_DEFAULT_BUCKET: ${MINIO_DEFAULT_BUCKET:-my-app-bucket}
+        ports:
+            # Порт для API MinIO (S3-совместимый)
+            - "9000:9000"
+            # Порт для веб-консоли MinIO
+            - "9001:9001"
+        volumes:
+            # Связываем том для хранения данных MinIO
+            - minio_data:/data
+            - ./init-minio.sh:/docker-entrypoint-init.d/init-minio.sh
         networks:
             - app-network
         healthcheck:
+            # Проверка доступности MinIO API
             test:
-                ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
-            interval: 30s
-            timeout: 20s
-            retries: 3
+                ["CMD-SHELL", "curl -f http://localhost:9000/minio/health/live"]
+            interval: 10s
+            timeout: 5s
+            retries: 5
 
 networks:
     app-network:
