--- a/Frontend/.prettierrc
+++ b/Frontend/.prettierrc
@@ -4,5 +4,14 @@
     "trailingComma": "es5",
     "singleQuote": true,
     "jsxSingleQuote": true,
-    "endOfLine": "lf"
+    "endOfLine": "lf",
+
+    "overrides": [
+        {
+            "files": "*.scss",
+            "options": {
+                "semi": false
+            }
+        }
+    ]
 }
