--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -49,7 +49,7 @@ services:
             - ASPNETCORE_URLS=http://+:80
             - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=${DB_NAME:-appdb};Username=${DB_USER:-postgres};Password=${DB_PASSWORD:-postgres}
             - Redis__ConnectionString=redis
-              - Minio__Endpoint=minio:9000
+            - Minio__Endpoint=localhost:9000
             # Имя пользователя MinIO (из .env)
             - Minio__AccessKey=${MINIO_USER:-minioadmin}
             # Пароль MinIO (из .env)
