--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -47,17 +47,17 @@ services:
         environment:
             - ASPNETCORE_ENVIRONMENT=Development
             - ASPNETCORE_URLS=http://+:80
-            - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=${DB_NAME:-appdb};Username=${DB_USER:-postgres};Password=${DB_PASSWORD:-postgres}
+            - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD}
             - Redis__ConnectionString=redis
-            - Minio__Endpoint=localhost:9000
+            - Minio__Endpoint=minio:9000
             # Имя пользователя MinIO (из .env)
-            - Minio__AccessKey=${MINIO_USER:-minioadmin}
+            - Minio__AccessKey=${MINIO_USER}
             # Пароль MinIO (из .env)
-            - Minio__SecretKey=${MINIO_PASSWORD:-minioadmin}
+            - Minio__SecretKey=${MINIO_PASSWORD}
             # Указываем, что не используем SSL для внутренней коммуникации
             - Minio__UseSSL=false
             # Имя бакета по умолчанию (можно тоже вынести в .env)
-            - Minio__BucketName=${MINIO_DEFAULT_BUCKET:-my-app-bucket}
+            - Minio__BucketName=${MINIO_DEFAULT_BUCKET}
         networks:
             - app-network
         depends_on:
@@ -92,9 +92,9 @@ services:
             - .env # Читаем переменные из .env
         environment:
             # Учетные данные для доступа к MinIO (из .env файла)
-            MINIO_ROOT_USER: ${MINIO_USER:-minioadmin} # Задает пользователя по умолчанию, если в .env нет
-            MINIO_ROOT_PASSWORD: ${MINIO_PASSWORD:-minioadmin} # Задает пароль по умолчанию, если в .env нет
-            MINIO_DEFAULT_BUCKET: ${MINIO_DEFAULT_BUCKET:-my-app-bucket}
+            MINIO_ROOT_USER: ${MINIO_USER} # Задает пользователя по умолчанию, если в .env нет
+            MINIO_ROOT_PASSWORD: ${MINIO_PASSWORD} # Задает пароль по умолчанию, если в .env нет
+            MINIO_DEFAULT_BUCKET: ${MINIO_DEFAULT_BUCKET}
         ports:
             # Порт для API MinIO (S3-совместимый)
             - "9000:9000"
